Add all css requirements from instructions

--- a/index.html
+++ b/index.html
@@ -11,29 +11,29 @@
     <div class="first">
         <header>
             <div>
-                <h3>Header Logo</h1>
+                <h3 class="logo">Header Logo</h1>
             </div>
             <nav>
                 <ul>
-                    <li><a href="">Header Link One</a></li>
-                    <li><a href="">Header Link Two</a></li>
-                    <li><a href="">Header Link Three</a></li>
+                    <li><a href="" class="heroSecondary">Header Link One</a></li>
+                    <li><a href="" class="heroSecondary">Header Link Two</a></li>
+                    <li><a href="" class="heroSecondary">Header Link Three</a></li>
                 </ul>
             </nav>
         </header>
         <div>
             <div>
-                <h1>This Website is Awesome</h1>
-                <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
-                <button>Sign Up</button>
+                <h1 class="heroMain">This Website is Awesome</h1>
+                <p class="heroSecondary">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
+                <button class="call first">Sign Up</button>
             </div>
-            <div>
+            <div class="image">
                 This is a placeholder for an image.
             </div>
         </div>
     </div>
     <div class="second">
-        <h2>Some Random Information</h2>
+        <h2 class="infoHeader">Some Random Information</h2>
         <div>
             <div>
                 <div></div>
@@ -62,15 +62,15 @@
         </div>
     </div>
     <div class="third">
-        <p>This is an inspiring quote, or a testimonial from a customer. maybe it's just filling up space,or maybe people will actually read it. Who knows? All I know is that it looks nice. <q>-Thor, God of Thunder</q></p>
+        <p class="quote">This is an inspiring quote, or a testimonial from a customer. maybe it's just filling up space,or maybe people will actually read it. Who knows? All I know is that it looks nice. <q>-Thor, God of Thunder</q></p>
     </div>
     <div class="fourth">
         <div>
-            <div>
+            <div class="call">
                 <div>Call to action! It's time!</div>
                 <div>Sign up for our product by clicking that button right over there!</div>
             </div>
-            <button>Sign up</button>
+            <button class="call second">Sign up</button>
         </div>
     </div>
     <footer class="fifth">
