--- a/index.html
+++ b/index.html
@@ -7,70 +7,72 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<div>
-    <div class="first">
-        <header>
-            <div>
-                <h3 class="logo">Header Logo</h1>
-            </div>
-            <nav>
-                <ul>
-                    <li><a href="" class="heroSecondary">Header Link One</a></li>
-                    <li><a href="" class="heroSecondary">Header Link Two</a></li>
-                    <li><a href="" class="heroSecondary">Header Link Three</a></li>
-                </ul>
-            </nav>
-        </header>
-        <div>
-            <div>
-                <h1 class="heroMain">This Website is Awesome</h1>
-                <p class="heroSecondary">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
-                <button class="call first">Sign Up</button>
-            </div>
-            <div class="image">
-                This is a placeholder for an image.
-            </div>
-        </div>
-    </div>
-    <div class="second">
-        <h2 class="infoHeader">Some Random Information</h2>
-        <div>
-            <div>
-                <div></div>
+<div class="allContent">
+    <div>
+        <div class="first">
+            <header>
                 <div>
-                    This is some subtext under an illustration or image
+                    <h3 class="logo">Header Logo</h1>
                 </div>
-            </div>
-            <div>
-                <div></div>
+                <nav>
+                    <ul class="nav">
+                        <li><a href="" class="heroSecondary">Header Link One</a></li>
+                        <li><a href="" class="heroSecondary">Header Link Two</a></li>
+                        <li><a href="" class="heroSecondary">Header Link Three</a></li>
+                    </ul>
+                </nav>
+            </header>
+            <div class="heroUnited">
                 <div>
-                    This is some subtext under an illustration or image
+                    <h1 class="heroMain">This Website is Awesome</h1>
+                    <p class="heroSecondary">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
+                    <button class="call first">Sign Up</button>
                 </div>
-            </div>
-            <div>
-                <div></div>
-                <div>
-                    This is some subtext under an illustration or image
-                </div>
-            </div>
-            <div>
-                <div></div>
-                <div>
-                    This is some subtext under an illustration or image
+                <div class="image">
+                    This is a placeholder for an image.
                 </div>
             </div>
         </div>
-    </div>
-    <div class="third">
-        <p class="quote">This is an inspiring quote, or a testimonial from a customer. maybe it's just filling up space,or maybe people will actually read it. Who knows? All I know is that it looks nice. <q>-Thor, God of Thunder</q></p>
-    </div>
-    <div class="fourth">
-        <div>
-            <div class="call">
-                <div>Call to action! It's time!</div>
-                <div>Sign up for our product by clicking that button right over there!</div>
+        <div class="second">
+            <h2 class="infoHeader">Some Random Information</h2>
+            <div class="boxes">
+                <div class="mini">
+                    <div class="box"></div>
+                    <div>
+                        This is some subtext under an illustration or image
+                    </div>
+                </div>
+                <div class="mini">
+                    <div class="box"></div>
+                    <div>
+                        This is some subtext under an illustration or image
+                    </div>
+                </div>
+                <div class="mini">
+                    <div class="box"></div>
+                    <div>
+                        This is some subtext under an illustration or image
+                    </div>
+                </div>
+                <div class="mini">
+                    <div class="box"></div>
+                    <div>
+                        This is some subtext under an illustration or image
+                    </div>
+                </div>
             </div>
-            <button class="call second">Sign up</button>
+        </div>
+        <div class="third">
+            <div class="quote">This is an inspiring quote, or a testimonial from a customer. maybe it's just filling up space,or maybe people will actually read it. Who knows? All I know is that it looks nice. <q>-Thor, God of Thunder</q></div>
+        </div>
+        <div class="fourth">
+            <div>
+                <div class="call">
+                    <div>Call to action! It's time!</div>
+                    <div>Sign up for our product by clicking that button right over there!</div>
+                </div>
+                <button class="call second">Sign up</button>
+            </div>
         </div>
     </div>
     <footer class="fifth">
