--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div class="allContent">
-    <div>
+    <div class="mainContent">
         <div class="first">
             <header>
                 <div>
@@ -23,7 +23,7 @@
                 </nav>
             </header>
             <div class="heroUnited">
-                <div>
+                <div class="heroMainer">
                     <h1 class="heroMain">This Website is Awesome</h1>
                     <p class="heroSecondary">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
                     <button class="call first">Sign Up</button>
@@ -66,7 +66,7 @@
             <div class="quote">This is an inspiring quote, or a testimonial from a customer. maybe it's just filling up space,or maybe people will actually read it. Who knows? All I know is that it looks nice. <q>-Thor, God of Thunder</q></div>
         </div>
         <div class="fourth">
-            <div>
+            <div class="allCall">
                 <div class="call">
                     <div>Call to action! It's time!</div>
                     <div>Sign up for our product by clicking that button right over there!</div>
