--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <div class="fourth">
             <div class="allCall">
                 <div class="call">
-                    <div>Call to action! It's time!</div>
+                    <div class="action">Call to action! It's time!</div>
                     <div>Sign up for our product by clicking that button right over there!</div>
                 </div>
                 <button class="call second">Sign up</button>
